<resources>
    <string name="app_name">GiftApp</string>

    // screens
    <string name="main" translatable="false">@string/app_name</string>
    <string name="test">Gift-Test</string>
    <string name="impress">Impress</string>
    <string name="reset">Reset Data</string>
    <string name="reset_msg">Reset was successfully!</string>

    // main
    <string name="main_start">Start test</string>
    <string name="main_continue">Continue test</string>
    <string name="main_all">Show all</string>
    <string name="main_header">Gift-Test</string>
    <string name="main_content">Start the Gift-Test here!</string>
    <string name="main_daily_url">https://www.biblegateway.com/usage/votd/rss/votd.rdf?31</string>

    // test
    <string name="test_report">Report</string>
    <string name="test_page1">Page 1</string>
    <string name="test_page2">Page 2</string>
    <string name="test_page3">Page 3</string>
    <string name="test_page4">Page 4</string>
    <string name="test_page5">Page 5</string>
    <string name="test_page6">Page 6</string>

    // question
    <string name="question_unset">unset</string>
    <string name="question_never">never</string>
    <string name="question_much_rarely">much rarely</string>
    <string name="question_rarely">rarely</string>
    <string name="question_sometimes">sometimes</string>
    <string name="question_often">often</string>
    <string name="question_much_often">much often</string>
    <string name="question_always">always</string>
    <string name="question_result_points">Points</string>
    <string name="question_result_keyword">Keyword</string>
    <string name="question_result_negative">Negative</string>
    <string name="question_result_target">Target</string>
    <string name="question_result_bible">Bible-Passage</string>

    // impress
    <string name="impress_content">
        <![CDATA[
            <p>
                The App was built by <a href="https://domjos.de">Domjos</a>.
                The Bible-Verse was made by <a href="https://www.biblegateway.com">Bible-Gateway</a>.
            </p>
        ]]>
    </string>

    // bible
    <string name="bible">Bible</string>
    <string name="bible_choice">Bibles</string>
    <string name="bible_books">Books</string>
    <string name="bible_chapters">Chapters</string>
    <string name="bible_next">Next</string>
    <string name="bible_previous">Previous</string>
    <string name="bible_search">Search</string>
    <string name="bible_item_title">Title</string>
    <string name="bible_item_title_sub">Sub-Title</string>
    <string name="bible_item_icon" translatable="false">Bible-Item-Icon</string>
</resources>