<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.domjos.gift_app.activities.MainActivity">
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_impress"
        android:orderInCategory="100"
        android:title="@string/impress"
        app:showAsAction="never" />
    <item android:id="@+id/search"
        android:title="@string/bible_search"
        android:icon="@drawable/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
</menu>