<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_page1_2"
        android:layout_margin="@dimen/question_label_margin"
        android:textSize="@dimen/question_label_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/choice"/>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/question_label_margin"
        android:background="@drawable/question_area_background"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexWrap="wrap">
        <TextView
            android:id="@+id/lblUnset"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_unset"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:background="@drawable/question_area_selected"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/lblNever"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_never"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/lblMuchRarely"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_much_rarely"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/lblRarely"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_rarely"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/lblSometimes"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_sometimes"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/lblOften"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_often"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/lblMuchOften"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_much_often"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/lblAlways"
            android:layout_width="@dimen/question_answer_width"
            android:layout_height="@dimen/question_answer_height"
            android:text="@string/question_always"
            android:gravity="center"
            android:padding="@dimen/question_answer_padding"
            android:textColor="@color/black"/>
    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>