<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivItem"
        android:src="@android:drawable/dialog_holo_dark_frame"
        android:contentDescription="@string/bible_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/lblTitle"
        android:text="@string/bible_item_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:padding="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItem"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/lblSubTitle"
        android:text="@string/bible_item_title_sub"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitle"/>
</androidx.constraintlayout.widget.ConstraintLayout>