<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/button_margin"
    android:background="@drawable/gift_item_header">

    <TextView
        android:id="@+id/lblHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/question_label_size"
        android:text="@string/test_report"
        android:textSize="@dimen/question_label_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/lblDescription"
        android:text="@string/question_page1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/lblKeywordHeader"
        android:text="@string/question_result_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:textStyle="bold"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lblKeywordContent"/>
    <TextView
        android:id="@+id/lblKeywordContent"
        android:text="@string/question_page1_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
        app:layout_constraintLeft_toRightOf="@+id/lblBibleHeader"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/lblTargetHeader"
        android:text="@string/question_result_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:textStyle="bold"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblKeywordContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lblTargetContent"/>
    <TextView
        android:id="@+id/lblTargetContent"
        android:text="@string/test_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblKeywordContent"
        app:layout_constraintLeft_toRightOf="@+id/lblBibleHeader"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/lblNegativeHeader"
        android:text="@string/question_result_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:textStyle="bold"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblTargetContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lblNegativeContent"/>
    <TextView
        android:id="@+id/lblNegativeContent"
        android:text="@string/test_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblTargetContent"
        app:layout_constraintLeft_toRightOf="@+id/lblBibleHeader"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/lblBibleHeader"
        android:text="@string/question_result_bible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:textStyle="bold"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblNegativeContent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/lblBibleContent"/>
    <TextView
        android:id="@+id/lblBibleContent"
        android:text="@string/test_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/question_label_size"
        android:padding="@dimen/question_label_size"
        app:layout_constraintTop_toBottomOf="@+id/lblNegativeContent"
        app:layout_constraintLeft_toRightOf="@+id/lblBibleHeader"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>